# kfly_comm

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  kfly_telemetry.h  package.xml
example/: CMakeLists.txt  example.cpp
include/KFlyTelemetry/: crc.h  kfly_commands.h  kfly_enums.h  kfly_payloads.h  kfly_telemetry.h
include/kfly_comm/: commands.hpp  crc.hpp  datagram_director.hpp  datagram_traits.hpp  datagrams.hpp  enums.hpp  kfly_comm.h  kfly_comm.hpp  packet.hpp  serializable_datagram.hpp
src/: crc.cpp  datagram_director.hpp  kfly_comm.cpp  kfly_conversions.cpp  kfly_telemetry.cpp  serializable_datagram.hpp  test_new_crc.cpp  test_new_payload.cpp
